Closed Bug 685234 Opened 14 years ago Closed 14 years ago

GCC 4.6 build warning: "jsparse.cpp:8457:16: warning: variable 'afterComma' set but not used [-Wunused-but-set-variable]"

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla9

People

(Reporter: dholbert, Assigned: dholbert)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Filing bug on this GCC 4.6 build warning: { js/src/jsparse.cpp: In member function 'JSParseNode* js::Parser::primaryExpr(js::TokenKind, JSBool)': js/src/jsparse.cpp:8457:16: warning: variable 'afterComma' set but not used [-Wunused-but-set-variable] } A MXR search of old CVS source tree shows that in this variable was originally used once: https://mxr.mozilla.org/firefox/search?string=afterComma&find=%2Fjs { /js/src/jsparse.c line 5491 -- JSBool afterComma; line 5507 -- afterComma = JS_FALSE; line 5559 -- if (afterComma && <------------ (here's the only usage) line 5628 -- afterComma = JS_TRUE; } That usage was deleted in this cset for Bug 508637: https://hg.mozilla.org/mozilla-central/rev/12cc5c8c1236 Looks like this variable can just go away now.
Assignee: general → dholbert
Status: NEW → ASSIGNED
Attachment #558883 - Flags: review?(jimb)
Attachment #558883 - Flags: review?(jimb) → review+
Whiteboard: [inbound]
Target Milestone: --- → mozilla9
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [inbound]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: