Bug 685234: Remove unused variable 'afterComma' from jsparse.cpp. r=jimb